--- a/index.html
+++ b/index.html
@@ -60,14 +60,21 @@
         <h1 class="display-4 Gilroybold">DOWNLOAD APP,
           SAVE MONEY, MAKE
           FRIENDS!</h1>
-        <p class="text-secondary fs-5">Its simple and its free. Play your part in reducing Carbon Footprint and help
+        <p class="text-secondary fs-lg-5">Its simple and its free. Play your part in reducing Carbon Footprint and help
           Mother Nature to sustain its beauty. So what are you waiting for ? <br />
           Lets ride together!!</p>
 
-        <div class="d-flex flex-flow-wrap justify-content-center align-items-center gap-4">
-          <button class="btn btn-dark py-md-2 px-md--3"><i class="fa-brands fa-google-play"></i> DOWNLOAD</button>
-          <button class="btn btn-dark py-2 px-3"><i class="fa-brands fa-app-store" style="color: #ffffff;"></i>
-            DOWNLOAD</button>
+        <div class="container">
+          <div class="row align-items-center d-md-flex flex-md-row gap-2 gap-md-0">
+             <div class="col-12 col-md-6 text-md-end">
+              <button class="btn btn-dark py-md-2 px-md--3 fs-6"><i class="fa-brands fa-google-play"></i> DOWNLOAD</button>
+             </div>
+
+             <div class="col-12 col-md-6 pb-md-0 text-md-start">
+              <button class="btn btn-dark py-2 px-3 fs-6"><i class="fa-brands fa-app-store" style="color: #ffffff;"></i>
+                DOWNLOAD</button>
+             </div>
+          </div>
         </div>
 
       </div>
@@ -75,6 +82,18 @@
     </div>
   </main>
   <!-- hero end  -->
+  <div class="container mb-4 greenbg rounded-3 d-flex ">
+    <div class="container py-5">
+      <div class="row flex-flow-wrap text-center justify-content-around align-items-center gap-3 gap-md-0">
+        <div class="col-md-3 text-light"><p>Let’s go. Get a link <br />
+          to download the app.</p></div>
+        <div class="col-md-6"><input type="tel" name="email" id="email" placeholder="Enter Mobile Phone Number" class="px-xl-5 py-xl-3 px-5 w-100 py-2 rounded border-0 text-center"></div>
+        <div class="col-md-3"><button type="button" class="btn btn-dark px-xl-5 py-xl-3 fw-bold">APPLY TO DRIVE</button></div>
+      </div>
+    </div>
+  </div>
+  <!-- end of number card section  -->
+  
 
 </body>
 
