second last done

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </div>
   <!-- 1 2 3 section -->
 <div class="container w-100 d-flex justify-content-start">
-  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-3 rounded" style="background-color: #ffffff;"> 
+  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-3 rounded w-75" style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
         <div class="pb-3 d-flex align-items-center">
           <h1 class="greencolor fw-bold display-3">01.</h1>
@@ -195,10 +195,10 @@
   </div>
 </div>
 <!-- end  -->
-<div class="container mt-5 w-100 d-flex align-items-center justify-content-end ">
-  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-5" style="background-color: #ffffff;"> 
-    <div class="col-md-6"><img src="images/2 money.png" alt="" class="img-fluid w-10"></div>
-      <div class="col-md-6">
+<div class="container mt-5 w-100 d-flex  align-items-center justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end px-5">
+  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-5 rounded pt-3" style="background-color: #ffffff;"> 
+    <div class="col-md-6 px-lg-5"><img src="images/2 money.png" alt="" class="img-fluid w-10"></div>
+      <div class="col-md-6 px-5">
         <div class="pb-3 d-flex align-items-center">
           <h1 class="greencolor fw-bold display-3">02.</h1>
           <h4 class="text-start fw-bold">Earnings</h4>
@@ -214,11 +214,11 @@
   </div>
 </div>
 <!-- end  -->
-<div class="container w-100 d-flex justify-content-start align-items-center mt-5 ">
-  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded w-100 " style="background-color: #ffffff;"> 
+<div class="container w-100 d-lg-flex justify-content-lg-start align-items-lg-center d-flex justify-content-center align-items-center  mt-5 ">
+  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded w-75 pt-lg-3 pt-5 " style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
         <div class="pb-3 d-flex align-items-center">
-          <h1 class="greencolor fw-bold display-3">03.</h1>
+          <h1 class="greencolor fw-bold display-3 pe-3 pe-md-1  ">03.</h1>
           <h4 class="text-start fw-bold">Customer 
              </br >
              support 24/7</h4>
