--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <h1 class="pb-2  display-6 fw-medium Gilroybold text-center pt-4"><span class="greencolor">TERE</span>  BENEFITS</h1>
   </div>
   <!-- 1 2 3 section -->
-<div class="container w-100 d-flex justify-content-start">
+<div class="container w-100 d-lg-flex justify-content-lg-start d-flex justify-content-center ">
   <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-3 rounded w-75" style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
         <div class="pb-3 d-flex align-items-center">
@@ -195,7 +195,7 @@
   </div>
 </div>
 <!-- end  -->
-<div class="container mt-5 w-100 d-flex  align-items-center justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end px-5">
+<div class="container mt-5 w-100 d-flex  justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end px-5">
   <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-5 rounded pt-3" style="background-color: #ffffff;"> 
     <div class="col-md-6 px-lg-5"><img src="images/2 money.png" alt="" class="img-fluid w-10"></div>
       <div class="col-md-6 px-5">
@@ -234,7 +234,48 @@
   </div>
 </div>
 <!-- end  -->
-
+<!-- footer  -->
+<footer class="container-fluid py-5">
+  <div class="row">
+    <div class="col-12 col-md">
+      <img src="images/tere black.png" alt="">
+    </div>
+    <div class="col-6 col-md">
+      <h5>Be Our Friend</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Be Our Friend</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Government</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>About</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
+        <li><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
   
 </main>
 </body>
