--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </div>
   </main>
   <!-- hero end  -->
+  <!-- telephone  -->
   <div class="container mb-4 greenbg rounded-3 d-flex ">
     <div class="container py-5">
       <div class="row flex-flow-wrap text-center justify-content-around align-items-center gap-3 gap-md-0">
@@ -257,21 +258,18 @@
       </ul>
     </div>
     <div class="col-6 col-md">
-      <h5>Resources</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Government</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
+        <li>
+          <button class="btn btn-dark py-md-2 px-md--3 fs-6"><i class="fa-brands fa-google-play"></i> DOWNLOAD</button>
+         </li>
       </ul>
     </div>
     <div class="col-6 col-md">
-      <h5>About</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+        <li>
+          <button class="btn btn-dark py-2 px-3 fs-6"><i class="fa-brands fa-app-store" style="color: #ffffff;"></i>
+            DOWNLOAD</button>
+         </li>
       </ul>
     </div>
   </div>
