--- a/index.html
+++ b/index.html
@@ -236,44 +236,14 @@
 </div>
 <!-- end  -->
 <!-- footer  -->
-<footer class="container-fluid py-5">
-  <div class="row">
-    <div class="col-12 col-md">
-      <img src="images/tere black.png" alt="">
-    </div>
-    <div class="col-6 col-md">
-      <h5>Be Our Friend</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Be Our Friend</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
-        <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <ul class="list-unstyled text-small">
-        <li>
-          <button class="btn btn-dark py-md-2 px-md--3 fs-6"><i class="fa-brands fa-google-play"></i> DOWNLOAD</button>
-         </li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <ul class="list-unstyled text-small">
-        <li>
-          <button class="btn btn-dark py-2 px-3 fs-6"><i class="fa-brands fa-app-store" style="color: #ffffff;"></i>
-            DOWNLOAD</button>
-         </li>
-      </ul>
-    </div>
+<div class="container-fluid">
+  <div class="row row-cols-1 row-cols-md-4 g-3 text-center">
+    <div class="col themed-grid-col"><img src="images/tere black.png" alt="" class="img-fluid"></div>
+    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
+    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
+    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
   </div>
-</footer>
+</div>
   
 </main>
 </body>
