--- a/index.html
+++ b/index.html
@@ -234,18 +234,42 @@
 
   </div>
 </div>
+</main>
 <!-- end  -->
 <!-- footer  -->
-<div class="container-fluid">
-  <div class="row row-cols-1 row-cols-md-4 g-3 text-center">
-    <div class="col themed-grid-col"><img src="images/tere black.png" alt="" class="img-fluid"></div>
-    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
-    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
-    <div class="col themed-grid-col">lorem ipsum ipsum lorem</div>
-  </div>
-</div>
+  <footer class="container py-5">
+    <div class="row row-cols-1 row-cols-lg-5 gap-4 gap-lg-0">
+      <div class="col text-center text-lg-start order-1 ">
+        <img src="images/tere black.png" alt="" class="img-fluid">
+      </div>
+      <div class="col text-center text-lg-start order-4 order-lg-2">
+        <h5>Be Our Friend</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
+          <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
+          <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
+        </ul>
+      </div>
+      <div class="col text-center text-lg-start d-none d-lg-block order-lg-3">
+        <h5>Be Our Friend</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="link-secondary text-decoration-none" href="#">3, Season Park, Jakarta</a></li>
+          <li><a class="link-secondary text-decoration-none" href="#">support@foodyar.co,id</a></li>
+          <li><a class="link-secondary text-decoration-none" href="#">021 - 1111 - 2222</a></li>
+        </ul>
+      </div>
+      <div class="col text-center text-lg-start order-2 order-lg-4">
+        <button class="btn btn-dark py-md-2 px-md--3 fs-6"><i class="fa-brands fa-google-play"></i> DOWNLOAD</button>
+      </div>
+      <div class="col text-center text-lg-start order-3 order-lg-5">
+        <button class="btn btn-dark py-2 px-3 fs-6"><i class="fa-brands fa-app-store" style="color: #ffffff;"></i>
+          DOWNLOAD</button>
+      </div>
+    </div>
+  </footer>
+
   
-</main>
+
 </body>
 
 </html>
