--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
   <h1 class="pb-2  display-6 fw-medium Gilroybold text-center pt-4"><span class="greencolor">TERE</span>  BENEFITS</h1>
   </div>
   <!-- 1 2 3 section -->
-<div class="container w-100 d-lg-flex justify-content-lg-start d-flex justify-content-center ">
-  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-3 rounded w-75" style="background-color: #ffffff;"> 
+<div class="container-lg d-lg-flex justify-content-lg-start d-flex justify-content-center ">
+  <div class="row row-cols-1 d-flex align-items-center text-center px-3 rounded " style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
-        <div class="pb-3 d-flex align-items-center">
+        <div class="py-3 d-flex align-items-center justify-content-center d-lg-flex justify-content-lg-start ">
           <h1 class="greencolor fw-bold display-3">01.</h1>
           <h4 class="text-start fw-bold">Flexible </br >
             working hours</h4>
@@ -191,19 +191,19 @@
             time you want to drive.</p></div>
         </div>
       </div>
-      <div class="col-md-6"><img src="images/1timer.png" alt="" class="img-fluid w-10"></div>
+      <div class="col-md-6 px-5"><img src="images/1timer.png" alt="" class="img-fluid w-10"></div>
   
 
   </div>
 </div>
 <!-- end  -->
-<div class="container mt-5 w-100 d-flex  justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end px-5">
-  <div class="row row-cols-1 d-flex align-items-center text-center bg-white px-5 rounded pt-3" style="background-color: #ffffff;"> 
+<div class="container mt-5 d-flex  justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end">
+  <div class="row row-cols-1 d-flex align-items-center flex-column-reverse d-lg-flex align-items-lg-center flex-md-row  text-center bg-white px-5 rounded pt-3" style="background-color: #ffffff;"> 
     <div class="col-md-6 px-lg-5"><img src="images/2 money.png" alt="" class="img-fluid w-10"></div>
       <div class="col-md-6 px-5">
-        <div class="pb-3 d-flex align-items-center">
-          <h1 class="greencolor fw-bold display-3">02.</h1>
-          <h4 class="text-start fw-bold">Earnings</h4>
+        <div class="pb-3 d-flex align-items-center justify-content-center d-lg-flex justify-content-lg-start">
+          <h1 class="greencolor fw-bold display-3 ">02.</h1>
+          <h4 class=" fw-bold">Earnings</h4>
         </div>
         <div class="row ">
           <div class="col-md-9"><p class="text-body-secondary fs-6 text-start">By driving with tere you can 
@@ -216,21 +216,21 @@
   </div>
 </div>
 <!-- end  -->
-<div class="container w-100 d-lg-flex justify-content-lg-start align-items-lg-center d-flex justify-content-center align-items-center  mt-5 ">
-  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded w-75 pt-lg-3 pt-5 " style="background-color: #ffffff;"> 
+<div class="container d-lg-flex justify-content-lg-start  d-flex justify-content-center  mt-5 ">
+  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded pt-lg-3 pt-5 " style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
-        <div class="pb-3 d-flex align-items-center">
-          <h1 class="greencolor fw-bold display-3 pe-3 pe-md-1  ">03.</h1>
+        <div class="py-3 pb-3 d-flex align-items-center justify-content-center d-lg-flex justify-content-lg-start">
+          <h1 class="greencolor fw-bold display-3">03.</h1>
           <h4 class="text-start fw-bold">Customer 
              </br >
              support 24/7</h4>
         </div>
         <div class="row">
-          <div class="col-md-9"><p class="text-body-secondary text-start">You can decide when, and how much
+          <div class="col-md-7"><p class="text-body-secondary text-start">You can decide when, and how much
             time you want to drive.We are proud to be at your service 24/7!</p></div>
         </div>
       </div>
-      <div class="col-md-4"><img src="images/3 customer sales.png" alt="" class="img-fluid w-10 mx-auto d-block"></div>
+      <div class="col-md-6 text-start p-1"><img src="images/3 customer sales.png" alt="" class="img-fluid w-10 "></div>
   
 
   </div>
