--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <!-- cards now  -->
   <!-- main row  -->
   <div class="container">
-    `
+    
     <div class="row row-cols-1 row-cols-lg-3 d-flex align-items-center gap-5 gap-lg-0 ">
 
       <!-- card left  -->
@@ -137,8 +137,9 @@
       <!-- circle div  -->
       <!-- main row 1st col  -->
       <div
-        class="col d-flex align-items-center justify-content-center px-5 px-md-0 order-1 order-lg-2 postion-relative">
-        <img src="images/Ellipse.png" alt="Ellipse" class="img-fluid">
+        class="col d-flex align-items-center justify-content-center px-5 px-md-0 order-1 order-lg-2 postion-relative py-5">
+        <img src="images/Ellipse.png" alt="Ellipse" class="img-fluid circlemedia" >
+        <img src="images/Mobile.png" alt="" class=" z-3 position-absolute p-5 rounded-3 mobilemedia d-lg-none" >
       </div>
 
       <!-- main right col  -->
