--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
   <!-- header completed  -->
   <!-- hero section  -->
-  <main class="graybg pb-4">
+  <main class="graybg pb-4 postion-relative">
   <main class="container-fluid rounded graybg">
     <div class="row pt-5 mb-4 rounded text-body-emphasis d-md-flex flex-md-row-reverse">
       <!-- left side end  -->
@@ -147,7 +147,7 @@
       <!-- main row second col  -->
       <div class="col d-flex align-items-center order-3">
 
-        <div class="row row-cols-1 d-flex flex-column align-items-center gap-4 ">
+        <div class="row row-cols-1 d-flex flex-column align-items-center gap-4 w-100 ">
           <!-- 1st col of right  -->
           <div class="col d-flex flex-column align-items-center d-lg-flex align-items-lg-start gap-2">
             <div class="feature-icon-small d-inline-flex align-items-center rounded-3">
@@ -197,13 +197,15 @@
 
   </div>
 </div>
+
 <!-- end  -->
-<div class="container mt-5 d-flex  justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end">
+<div class="container mt-5 d-flex  justify-content-center d-lg-flex align-items-lg-center justify-content-lg-end postion-relative">
+  
   <div class="row row-cols-1 d-flex align-items-center flex-column-reverse d-lg-flex align-items-lg-center flex-md-row  text-center bg-white px-5 rounded pt-3" style="background-color: #ffffff;"> 
-    <div class="col-md-6 px-lg-5"><img src="images/2 money.png" alt="" class="img-fluid w-10"></div>
+    <div class="col-md-6 px-lg-5"><img src="images/2 money.png" alt="" class="img-fluid w-10 px-lg-5"></div>
       <div class="col-md-6 px-5">
         <div class="pb-3 d-flex align-items-center justify-content-center d-lg-flex justify-content-lg-start">
-          <h1 class="greencolor fw-bold display-3 ">02.</h1>
+          <h1 class="greencolor fw-bold display-3">02.</h1>
           <h4 class=" fw-bold">Earnings</h4>
         </div>
         <div class="row ">
@@ -216,9 +218,10 @@
 
   </div>
 </div>
+
 <!-- end  -->
-<div class="container d-lg-flex justify-content-lg-start  d-flex justify-content-center  mt-5 ">
-  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded pt-lg-3 pt-5 " style="background-color: #ffffff;"> 
+<div class="container d-lg-flex justify-content-lg-start  d-flex justify-content-center  mt-5">
+  <div class=" row row-cols-1 d-flex align-items-center px-3 rounded pt-lg-3 pt-5" style="background-color: #ffffff;"> 
       <div class="col-md-6 px-5">
         <div class="py-3 pb-3 d-flex align-items-center justify-content-center d-lg-flex justify-content-lg-start">
           <h1 class="greencolor fw-bold display-3">03.</h1>
@@ -236,6 +239,7 @@
 
   </div>
 </div>
+
 </main>
 <!-- end  -->
 <!-- footer  -->
@@ -269,7 +273,7 @@
           DOWNLOAD</button>
       </div>
     </div>
-    <p class="text-center border-top greencolor pt-3">All Rights Reserved tere by Codematics 2022</p>
+    <p class="text-center border-top greencolor pt-3 fw-bold">All Rights Reserved by Javeriya Saleem 2024</p>
   </footer>
 
   
